[package]
name = "bbc"
version = "0.1.0"
authors = ["univerz <univerz@fu-solution.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
ahash = "0.8"
argh = "0.1"
color-eyre = "0.6"
crossbeam-channel = "0.5"
derivative = "2.2"
hashbrown = "0.13"
indexmap = "1.9"
itertools = "0.10"
jemallocator = "0.5"
once_cell = "1.4"
owo-colors = "3.5"
parse-display = "0.8"
peg = "0.8.0"
pretty_assertions = "1.3"
rayon = "1.5"
strip-ansi-escapes = "0.1"
termion = "2.0"

[dev-dependencies]
criterion = "0.4"

[profile.release]
codegen-units = 1
lto = true
debug = 1

[profile.dev]
opt-level = 2
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[features]
# default = ["ui_tui"] # enable this to debug changes in printing
ui_tui = []
